[package]
name = "`blockbloom`"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.7", default-features = false }
async-trait = "0.1.58"
bcs = "0.1.3"
futures = "0.3.24"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
log = "0.4"
linera-sdk = "0.11.3"
linera-views = "0.11.3"

[dev-dependencies]
linera-sdk = { version = "0.11.3", features = ["test"] }
webassembly-test = "0.1.0"

[[bin]]
name = "blockbloom_contract"
path = "src/contract.rs"

[[bin]]
name = "blockbloom_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
